# favigen

./: Makefile  README.md  pyproject.toml
.github/: copilot-instructions.md
favicon_generator/: cli.py  converter.py
tests/: test_converter.py
