[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "favigen"
version = "0.7.0"
description = "A CLI tool to generate .ico favicon files from images"
readme = "README.md"
authors = [
    {name = "Mike Horrocks", email = "mikeh_74_@outlook.com"}
]
license = {text = "MIT"}
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "Pillow>=10.0.0",
    "click>=8.0.0",
    "svglib>=1.5.0",
    "reportlab>=4.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
]

[project.scripts]
favigen = "favicon_generator.cli:main"

[project.urls]
Homepage = "https://github.com/mikeh74/favicon-generator"
Repository = "https://github.com/mikeh74/favicon-generator"

[tool.setuptools.packages.find]
where = ["."]
include = ["favicon_generator*"]

[tool.ruff]
target-version = "py310"

[tool.ruff.lint]
# Enable these rule categories
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # Pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
    "N",  # pep8-naming
    "S",  # flake8-bandit
]

# Ignore these specific rules
ignore = [
    "E501",  # line too long, handled by formatter
    "B008",  # do not perform function calls in argument defaults
    "B905",  # `zip()` without an explicit `strict=` parameter
]

[tool.ruff.format]
# Like Black, use double quotes for strings.
quote-style = "double"

# Like Black, indent with spaces, rather than tabs.
indent-style = "space"

# Like Black, respect magic trailing commas.
skip-magic-trailing-comma = false

# Like Black, automatically detect the appropriate line ending.
line-ending = "auto"

[tool.ruff.lint.isort]
known-first-party = ["favicon_generator"]
known-third-party = ["PIL", "click", "reportlab", "svglib"]

[tool.pytest.ini_options]
testpaths = ["tests"]
